navbar active underlined + scrollbar jump fix

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -10,7 +10,6 @@
     justify-content: center;
     margin: 0 auto;
     margin-top: 2vh;
-    margin-bottom: 2vh;
 }
 
 .i-left{
