--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,3 +1,8 @@
+html{
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+}
+
 .proj-container{
     display: flex;
     width: 100vw;
